[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "F", "W",          # pycodestyle/pyflakes
  "I",                    # isort
  "B",                    # flake8-bugbear
  "UP",                   # pyupgrade
]
ignore = [
  "E501",                 # allow long lines in markdown-ish generators
  "E701",                 # allow multiple statements on one line (colon)
  "E702",                 # allow multiple statements on one line (semicolon)
  "E741",                 # allow ambiguous variable names (l, I, O)
]

[tool.ruff.lint.per-file-ignores]
"scripts/config_loader.py" = ["E741"]
"tests/*" = ["E741", "B017"]

[tool.bandit]
exclude_dirs = ["tests", "data", "backups", ".git", ".obsidian", ".locks"]
skips = [
  "B101",  # allow assert in tests
  "B104", "B105",  # bind-all / hardcoded password false positives in dashboards/reports
  "B110", "B112",  # try/except pass/continue (used intentionally in collectors)
  "B310",           # urllib urlopen
  "B314", "B405",  # xml.etree warnings
  "B324",           # md5 used for cache keys, not security
  "B404", "B603", "B605", "B607",  # subprocess usage in local automation
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[project]
name = "goyoonjung-wiki"
version = "1.0.0"
description = "Automated wiki for Go Youn-jung"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0,<3",
    "beautifulsoup4>=4.12.0,<5",
    "aiohttp>=3.9.0",
    "asyncio-throttle>=1.0.2",
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "rich>=13.7.0",
    "schedule>=1.2.0",
    "gitpython>=3.1.40",
    "psutil>=5.9.6",
    "redis>=5.0.1",
    "python-dotenv>=1.0.0",
    "lxml>=4.9.3",
    "feedparser>=6.0.10",
    "validators>=0.22.0",
    "bleach>=6.1.0",
]
